# hermeneutic

./: CMakeLists.txt  README.md  vcpkg.json
docker-devbox/: Dockerfile  docker-compose.yml
docker-runtime-app/: Dockerfile  README.md
src/: common.h  logger.h
src/client/: base_client.h  client1.cc  client2.cc  client3.cc  orderbook.h
src/market_protocol/: link_binance.h  link_cryptocom.h  link_kraken.h  wws_link.h
src/protos/: aggregator.grpc.pb.cc  aggregator.grpc.pb.h  aggregator.pb.cc  aggregator.pb.h  aggregator.proto  gen.sh
src/server/: aggregator_server.h  poco_init.h  server.cc
src/tests/: test_orderbook.cc
